# jetson_xavier_dump

./: README.md  surveillance_system.sh
catkin_ws/src/check_interest_points/: CMakeLists.txt  package.xml
catkin_ws/src/check_interest_points/msg/: DebugMSG.msg
catkin_ws/src/check_interest_points/src/ros/: main.cpp
catkin_ws/src/check_interest_points/srv/: StartMission.srv
catkin_ws/src/drone_bringup/: CMakeLists.txt  package.xml
catkin_ws/src/drone_bringup/config/dev_configs/: config.yaml
catkin_ws/src/drone_bringup/config/simulation/iris/: config.yaml
catkin_ws/src/drone_bringup/launch/: drone_sim.launch
catkin_ws/src/drone_bringup/launch/dev_launch/: check_interest_points.launch  control.launch  drone_follow_waypoint.launch  lissajous.launch  lissajous_2.launch
catkin_ws/src/drone_gazebo/drone_description/: CMakeLists.txt  package.xml
catkin_ws/src/drone_gazebo/drone_description/models/iris/: iris.sdf.jinja  iris.urdf
catkin_ws/src/drone_gazebo/drone_sim_bringup/: CMakeLists.txt  package.xml
catkin_ws/src/drone_gazebo/drone_sim_bringup/launch/: real.launch  rviz.launch  rvizcfg.rviz  rvizcfg_aero2.rviz  simulator_bringup.launch  single_vehicle_spawn.launch  vehicle_bringup.launch
catkin_ws/src/drone_gazebo/drone_worlds/: CMakeLists.txt  package.xml
catkin_ws/src/drone_gimmicks_library/: CMakeLists.txt  package.xml
catkin_ws/src/drone_gimmicks_library/include/drone_gimmicks_library/: DroneGimmicks.h
catkin_ws/src/drone_gimmicks_library/src/: DroneGimmicks.cpp
catkin_ws/src/drone_library/drone_utils_cpp/: CMakeLists.txt  package.xml
catkin_ws/src/drone_library/drone_utils_cpp/include/drone_utils_cpp/: DroneInfo.h  DroneStatus.h  Utils.h
catkin_ws/src/drone_library/drone_utils_cpp/src/: Utils.cpp
catkin_ws/src/drone_library/mavros_cpp/: CMakeLists.txt  package.xml
catkin_ws/src/drone_library/mavros_cpp/doc/: README.md
catkin_ws/src/drone_library/mavros_cpp/include/mavros_cpp/: Actuators.h  EKF.h  Sensors.h  UAV.h
catkin_ws/src/drone_library/mavros_cpp/src/: UAV.cpp  offboard.cpp  telemetry.cpp
catkin_ws/src/lissajous/: CMakeLists.txt  package.xml
catkin_ws/src/lissajous/src/ros/: main.cpp  main_backup2.cpp
catkin_ws/src/mission_planner/: CMakeLists.txt  package.xml
catkin_ws/src/mission_planner/launch/: mission_planner.launch
catkin_ws/src/mission_planner/src/ros/: main.cpp
catkin_ws/src/rviz_uav_marker/: CMakeLists.txt  package.xml
catkin_ws/src/rviz_uav_marker/launch/: test.launch
catkin_ws/src/rviz_uav_marker/src/ros/: main.cpp
catkin_ws/src/waypoint_following/: CMakeLists.txt  package.xml
catkin_ws/src/waypoint_following/include/waypoint_following/: bezierCurvesStrategy.h  followingStrategyBaseClass.h  inspectStrategy.h  straightLinesStrategy.h
catkin_ws/src/waypoint_following/launch/: waypoint_following.launch
catkin_ws/src/waypoint_following/msg/: DebugMSG.msg  StopWpGenerationMSG.msg  WaypointMSG.msg
catkin_ws/src/waypoint_following/src/classes/: bezierCurvesStrategy.cpp  followingStrategyBaseClass.cpp  inspectStrategy.cpp  straightLinesStrategy.cpp
catkin_ws/src/waypoint_following/src/ros/: main.cpp
catkin_ws/src/waypoint_following/srv/: SpiralParameters.srv  StartStopMission.srv  WaypointRegistration.srv
catkin_ws_python/src/network_manager/: CMakeLists.txt  package.xml
catkin_ws_python/src/network_manager/config/: wsn_config.yaml
catkin_ws_python/src/network_manager/launch/: wsn_network_manager.launch
catkin_ws_python/src/network_manager/src/: network_manager.py  requirements.txt  stats_plotter.m
catkin_ws_python/src/network_manager/src/test_results/: 1_50_BW250.csv  1_50_CR8.csv  1_50_SF11.csv  1_50_SF7.csv  1_50_SF9.csv  basic1.csv  basic20.csv  basic50.csv  basic50_147.csv  teste1.csv
catkin_ws_python/src/network_manager/src/test_results/field_test/: field_A_crd5_sb125_sf11_50.csv  field_A_crd5_sb125_sf7_50.csv  field_A_crd5_sb125_sf9_50.csv  field_A_crd5_sb250_sf7_50.csv  field_A_crd8_sb125_sf7_50.csv  field_B_crd5_sb125_sf11_50.csv  field_B_crd5_sb125_sf7_50.csv  field_B_crd5_sb125_sf9_50.csv  field_B_crd5_sb250_sf7_50.csv  field_B_crd8_sb125_sf7_50.csv
