<?xml version="1.0"?>
<package format="2">
  <name>drone_bringup</name>
  <version>1.0.0</version>
  <description>Package to launch the drone stack</description>

  <author email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</author>
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>

  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>

