<?xml version="1.0"?>
<package format="2">
 <name>drone_gimmicks_library</name>
 <version>1.0.0</version>
 <description>
 TODO!
 </description>

 <license>GPLv3</license>

 <author email="dsor@gmail.com">DSOR</author>
 <maintainer email="dsor@gmail.com">DSOR</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <depend>roscpp</depend>

 <depend>std_msgs</depend>

 <depend>tf2</depend>

 <depend>tf2_ros</depend>

</package>
