<?xml version="1.0"?>
<package format="2">
 <name>lissajous</name>
 <version>1.0.0</version>
 <description>Implements the path following algorithm for a quadrotor drone</description>

 <license>GPLv3</license>

 <author email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</author>
 <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>

 <buildtool_depend>catkin</buildtool_depend>
 
 <depend>roscpp</depend>
 <depend>mavros_cpp</depend>
 <depend>drone_gimmicks_library</depend>
 <depend>drone_utils_cpp</depend>
</package>
