<?xml version="1.0"?>
<package format="2">
  <name>drone_sim_bringup</name>
  <version>1.0.0</version>
  <description>Package to spawn the vehicles and world simulator</description>

  <author email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</author>
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
