<?xml version="1.0"?>
<package format="2">
  <name>drone_worlds</name>
  <version>0.0.1</version>
  <description>Package that implements the simulation of a PX4 drone</description>

  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <author email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</author>

  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
