<?xml version="1.0"?>
<package format="2">
 <name>mavros_cpp</name>
 <version>1.0.0</version>
 <description>An introductory library for interfacing PX4 with ROS and cpp</description>

 <license>GPLv3</license>

 <author email="tiago.alexandre.oliveira@tecnico.ulisboa.pt">Tiago Alexandre da Silva Oliveira</author>
 <author email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Fialho Jacinto</author>
 <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>

 <buildtool_depend>catkin</buildtool_depend>
 <depend>roscpp</depend>
 <depend>tf2</depend>
 <depend>tf2_geometry_msgs</depend>

 <!-- Necessary ROS messages -->
 <depend>std_msgs</depend>
 <depend>geometry_msgs</depend>
 <depend>sensor_msgs</depend>
 <depend>mavros_msgs</depend>

 <!-- Drone_info_cpp for drone state -->
 <depend>drone_utils_cpp</depend>

</package>
